footer button text-align fix

--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -31,7 +31,7 @@ footer {
                 font-weight: 500;
                 background: none;
                 border: none;
-                font-size: inherit;
+                text-align: start;
 
                 img {
                     transition: .2s;
